<resources>
    <string name="app_name">Raffle</string>

    <!-- Menu and Navigation -->
    <string name="menu_home">Home</string>
    <string name="menu_create_raffle">Create Raffle</string>
    <string name="menu_sell_raffle">Sell Tickets</string>
    <string name="menu_create_user">Create Customer</string>
    <string name="nav_header_user">Admin User</string>
    <string name="nav_header_email">admin@raffles.com</string>
    <string name="navigation_draw_open">Open Navigation Draw</string>
    <string name="navigation_draw_close">Close Navigation Draw</string>
    <string name="tab_current">Current Raffles</string>
    <string name="tab_past">Past Raffles</string>


    <!-- strings related to create raffle fragment -->
    <string name="create_raffle_form">Create Raffle</string>
    <string name="name">Name:</string>
    <string name="description">Description:</string>
    <string name="type">Raffle Type:</string>
    <string name="start_date">Start Date:</string>
    <string name="location">Location:</string>
    <string name="ticket_price">Ticket Price:</string>
    <string name="max_tickets">Max tickets per person:</string>
    <string name="add_cover">Add a cover image for the raffle</string>
    <string name="cover_image">Cover Image</string>

    <!-- common string resources -->
    <string name="update">Update</string>
    <string name="create">Create</string>
    <string name="discard">Discard</string>
    <string name="draw_date">Draw Date:</string>
    <string name="num_tickets">No of Tickets:</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="prize">Prize:</string>
    <string name="edit_customer">Edit Customer</string>

    <!-- strings related to create customer fragment -->
    <string name="create_customer_form">Create Customer</string>
    <string name="title">Title:</string>
    <string name="first_name">First Name:</string>
    <string name="last_name">Last Name:</string>
    <string name="mobile">Mobile:</string>
    <string name="email">e-Mail:</string>
    <string name="address">Address:</string>
    <string name="suburb">Suburb:</string>
    <string name="state">State:</string>
    <string name="post_code">Post Code:</string>

    <!-- strings related to view raffle fragment -->
    <string name="tab_details">Details</string>
    <string name="tab_tickets">Tickets Sold</string>
    <string name="raffle_details">Raffle Details</string>
    <string name="draw_winner">Draw Winner</string>
    <string name="purchased_on">Purchased on: </string>
    <string name="tickets"> Tickets</string>
    <string name="total">Total: </string>

    <!-- strings related to sell tickets fragment -->
    <string name="sell_tickets">Sell Tickets</string>
    <string name="raffle">Raffle:</string>
    <string name="existing_details">Use existing customer details</string>
    <string name="total_price">Total price:</string>
    <string name="customer">Customer:</string>
    <string name="sell">Sell</string>

    <!-- strings related to ticket info fragment -->
    <string name="ticket_detail_title">%1$s\'s Tickets</string>

    <string-array name="title_array">
        <item>Dr</item>
        <item>Mr</item>
        <item>Miss</item>
        <item>Mrs</item>
        <item>Ms</item>
    </string-array>

    <string-array name="states_array">
        <item>ACT</item>
        <item>NSW</item>
        <item>NT</item>
        <item>SA</item>
        <item>TAS</item>
        <item>VIC</item>
        <item>WA</item>
    </string-array>

    <string-array name="raffle_types_array">
        <item>Normal Raffle</item>
        <item>Margin Raffle</item>
    </string-array>

    <string-array name="raffle_tickets_array">
        <item>10</item>
        <item>25</item>
        <item>50</item>
        <item>75</item>
        <item>100</item>
        <item>150</item>
        <item>200</item>
        <item>250</item>
        <item>500</item>
    </string-array>

    <string name="create_customer_success">Created Customer Successfully</string>
    <string name="update_customer_success">Updated Customer Successfully</string>
    <string name="create_raffle_success">Created Raffle Successfully</string>
    <string name="update_raffle_success">Updated Raffle Successfully</string>
    <string name="sell_ticket_success">Sold Ticket(s) Successfully</string>
    <string name="delete_raffle_success">Successfully deleted the selected Raffle(s)</string>

    <string name="alert_dialog_title">Alert!</string>
    <string name="alert_dialog_discard_msg">Are you sure you want to discard the changes?</string>
    <string name="alert_dialog_yes">Yes</string>
    <string name="alert_dialog_no">No</string>

    <string name="warning_dialog_title">Warning!</string>
    <string name="warning_dialog_max_buy_msg">This Customer has already brought max amount</string>
    <string name="warning_dialog_over_buy_msg">This Customer will exceed the max limit \nCan only purchase %1$d ticket(s)</string>
    <string name="warning_dialog_dismiss">Dismiss</string>
    <string name="warning_no_existing_customers">There are no existing customers.</string>

    <string name="winner_dialog_title">Congratulations!</string>
    <string name="winner_dialog_msg">Winning ticket number is: %1$s \nBelongs to: %2$s</string>
    <string name="margin_draw_dialog">Enter the winning margin</string>
    <string name="margin_draw_dialog_btn">Check</string>

    <string name="error_dialog_create_title">Create Error!</string>
    <string name="error_dialog_create_msg">All fields are required!</string>
    <string name="error_dialog_create_raffle_msg">Except for cover image all fields are required!</string>
    <string name="error_dialog_select_title">Create Error!</string>
    <string name="error_dialog_no_select_msg">To edit need to select one Raffle! \nTo delete need to select at least one Raffle!</string>
    <string name="error_dialog_edit_multi_msg">Can only edit one raffle at a time!</string>
    <string name="error_not_deleted_msg_multi">The following Raffle(s): %1$s Not deleted\nReason: Raffles have already started.</string>
    <string name="error_not_deleted_msg_single">Raffle<b>%1$s</b> Not deleted\n<b>Reason:</b> The Raffle has started.</string>
    <string name="error_margin_draw_title">Margin Ticket Draw Winner Error!</string>
    <string name="error_margin_draw_msg">Sorry\nNo customer has a ticket number matching the margin</string>

    <string name="edit_raffle">Edit Raffle</string>
    <string name="winner">Winners Detail</string>
    <string name="ticket_num">Ticket No:</string>
</resources>
