<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home"/>
        <item android:id="@+id/nav_create_raffle"
            android:icon="@drawable/ic_create"
            android:title="@string/menu_create_raffle" />
        <item android:id="@+id/nav_sell_raffle"
            android:icon="@drawable/ic_sell"
            android:title="@string/menu_sell_raffle" />
        <item android:id="@+id/nav_create_customer"
            android:icon="@drawable/ic_create_customer"
            android:title="@string/menu_create_user" />
    </group>
</menu>