<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.create.raffle.CreateRaffle">

    <TextView
        android:id="@+id/lblRaffleDetails"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/txt_height"
        android:layout_marginTop="16dp"
        android:text="@string/raffle_details"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnEdit_RD"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/txt_height"
        android:layout_marginStart="27dp"
        android:layout_marginLeft="27dp"
        android:layout_marginTop="73dp"
        android:background="@color/edit_btn"
        android:drawableStart="@drawable/ic_edit"
        android:drawableLeft="@drawable/ic_edit"
        android:text="@string/edit"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnDelete_RD"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/txt_height"
        android:layout_marginStart="23dp"
        android:layout_marginLeft="23dp"
        android:background="@color/delete_btn"
        android:drawableStart="@drawable/ic_delete"
        android:drawableLeft="@drawable/ic_delete"
        android:text="@string/delete"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toEndOf="@+id/btnEdit_RD"
        app:layout_constraintTop_toTopOf="@+id/btnEdit_RD" />

    <TextView
        android:id="@+id/txtName_RD"
        android:layout_width="176dp"
        android:layout_height="52dp"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:ems="10"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/lblName"
        app:layout_constraintTop_toTopOf="@+id/lblName" />

    <TextView
        android:id="@+id/lblTicketPrice"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/txt_height"
        android:layout_marginTop="8dp"
        android:text="@string/ticket_price"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/lblLocation"
        app:layout_constraintTop_toBottomOf="@+id/lblLocation" />

    <TextView
        android:id="@+id/lblLocation"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/txt_height"
        android:layout_marginTop="8dp"
        android:text="@string/location"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/lblStartDate"
        app:layout_constraintTop_toBottomOf="@+id/lblStartDate" />

    <TextView
        android:id="@+id/lblDesc"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/txt_height"
        android:layout_marginTop="24dp"
        android:text="@string/description"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/lblName"
        app:layout_constraintTop_toBottomOf="@+id/lblName" />

    <TextView
        android:id="@+id/lblName"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/txt_height"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="124dp"
        android:text="@string/name"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblRaffleDetails" />

    <TextView
        android:id="@+id/txtMaxTickets_RD"
        android:layout_width="60dp"
        android:layout_height="38dp"
        android:ems="10"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/lblMaxTickets"
        app:layout_constraintStart_toEndOf="@+id/lblMaxTickets"
        app:layout_constraintTop_toTopOf="@+id/lblMaxTickets"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/lblStartDate"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/txt_height"
        android:layout_marginTop="8dp"
        android:text="@string/start_date"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/lblRaffleType"
        app:layout_constraintTop_toBottomOf="@+id/lblRaffleType" />

    <TextView
        android:id="@+id/lblRaffleType"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/txt_height"
        android:layout_marginTop="58dp"
        android:text="@string/type"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/lblDesc"
        app:layout_constraintTop_toBottomOf="@+id/lblDesc" />

    <TextView
        android:id="@+id/txtNumTickets_RD"
        android:layout_width="78dp"
        android:layout_height="38dp"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        app:layout_constraintBottom_toBottomOf="@+id/lblNumTickets"
        app:layout_constraintStart_toEndOf="@+id/lblNumTickets"
        app:layout_constraintTop_toTopOf="@+id/lblNumTickets"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/lblMaxTickets"
        android:layout_width="84dp"
        android:layout_height="38dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:text="@string/max_tickets"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/txtNumTickets_RD"
        app:layout_constraintStart_toEndOf="@+id/txtNumTickets_RD"
        app:layout_constraintTop_toTopOf="@+id/txtNumTickets_RD"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/txtDrawDate_RD"
        android:layout_width="100dp"
        android:layout_height="@dimen/txt_height"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:ems="10"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/lblDrawDate"
        app:layout_constraintStart_toEndOf="@+id/lblDrawDate"
        app:layout_constraintTop_toTopOf="@+id/lblDrawDate"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/lblDrawDate"
        android:layout_width="76dp"
        android:layout_height="@dimen/txt_height"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:text="@string/draw_date"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/txtStartDate_RD"
        app:layout_constraintStart_toEndOf="@+id/txtStartDate_RD"
        app:layout_constraintTop_toTopOf="@+id/txtStartDate_RD"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/txtLocation_RD"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/txt_height"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:ems="10"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/lblLocation"
        app:layout_constraintStart_toEndOf="@+id/lblLocation"
        app:layout_constraintTop_toTopOf="@+id/lblLocation"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/lblNumTickets"
        android:layout_width="79dp"
        android:layout_height="38dp"
        android:layout_marginTop="8dp"
        android:text="@string/num_tickets"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/lblTicketPrice"
        app:layout_constraintTop_toBottomOf="@+id/lblTicketPrice" />

    <ImageView
        android:id="@+id/imgCover_RD"
        android:layout_width="121dp"
        android:layout_height="135dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="36dp"
        android:layout_marginRight="36dp"
        android:contentDescription="@string/cover_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblRaffleDetails" />

    <TextView
        android:id="@+id/txtRaffleType_RD"
        android:layout_width="228dp"
        android:layout_height="@dimen/txt_height"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        app:layout_constraintBottom_toBottomOf="@+id/lblRaffleType"
        app:layout_constraintStart_toEndOf="@+id/lblRaffleType"
        app:layout_constraintTop_toTopOf="@+id/lblRaffleType"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/txtTicketPrice_RD"
        android:layout_width="166dp"
        android:layout_height="37dp"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:ems="10"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/lblTicketPrice"
        app:layout_constraintStart_toEndOf="@+id/lblTicketPrice"
        app:layout_constraintTop_toTopOf="@+id/lblTicketPrice"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/txtDesc_RD"
        android:layout_width="292dp"
        android:layout_height="87dp"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:ems="10"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/lblDesc"
        app:layout_constraintTop_toTopOf="@+id/lblDesc" />

    <TextView
        android:id="@+id/txtStartDate_RD"
        android:layout_width="100dp"
        android:layout_height="@dimen/txt_height"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:ems="10"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/lblStartDate"
        app:layout_constraintStart_toEndOf="@+id/lblStartDate"
        app:layout_constraintTop_toTopOf="@+id/lblStartDate"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>