<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sell_tickets_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.sell.SellTicket">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background">

        <TextView
            android:id="@+id/lblSellTickets"
            android:layout_width="349dp"
            android:layout_height="41dp"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="30dp"
            android:layout_marginRight="30dp"
            android:background="@color/background"
            android:gravity="center"
            android:text="@string/sell_tickets"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/drawBtn"
            android:textStyle="bold"
            app:fontFamily="@font/bevan"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/lblRaffle"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:text="@string/raffle"
            android:textColor="@color/textTitle"
            android:textSize="16sp"
            android:textStyle="bold"
            app:fontFamily="@font/adamina"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lblSellTickets" />

        <Spinner
            android:id="@+id/raffles_spinner"
            android:layout_width="288dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:layout_marginRight="30dp"
            app:layout_constraintBottom_toBottomOf="@+id/lblRaffle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/lblRaffle"
            app:layout_constraintTop_toTopOf="@+id/lblRaffle" />

        <TextView
            android:id="@+id/lblNumTickets"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/num_tickets"
            android:textColor="@color/textTitle"
            android:textSize="16sp"
            android:textStyle="bold"
            app:fontFamily="@font/adamina"
            app:layout_constraintStart_toStartOf="@+id/lblRaffle"
            app:layout_constraintTop_toBottomOf="@+id/lblRaffle" />

        <Spinner
            android:id="@+id/num_tickets_spinner"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/lblNumTickets"
            app:layout_constraintStart_toEndOf="@+id/lblNumTickets"
            app:layout_constraintTop_toTopOf="@+id/lblNumTickets" />

        <TextView
            android:id="@+id/lblTotalPrice"
            android:layout_width="@dimen/title_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/total_price"
            android:textColor="@color/delete_btn"
            android:textSize="16sp"
            android:textStyle="bold"
            app:fontFamily="@font/adamina"
            app:layout_constraintStart_toStartOf="@+id/lblNumTickets"
            app:layout_constraintTop_toBottomOf="@+id/lblNumTickets" />

        <TextView
            android:id="@+id/txtTotalPrice"
            android:layout_width="@dimen/txt_width"
            android:layout_height="wrap_content"
            android:textColor="@color/delete_btn"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/lblTotalPrice"
            app:layout_constraintStart_toEndOf="@+id/lblTotalPrice"
            app:layout_constraintTop_toTopOf="@+id/lblTotalPrice" />

        <CheckBox
            android:id="@+id/cbx_existing_customer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/existing_details"
            android:textColor="@color/textTitle"
            android:textSize="16sp"
            android:textStyle="bold"
            app:fontFamily="@font/adamina"
            app:layout_constraintStart_toStartOf="@+id/lblTotalPrice"
            app:layout_constraintTop_toBottomOf="@+id/lblTotalPrice" />

        <TextView
            android:id="@+id/lblCustomer_ST"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/customer"
            android:textColor="@color/textTitle"
            android:textSize="16sp"
            android:textStyle="bold"
            app:fontFamily="@font/adamina"
            app:layout_constraintStart_toStartOf="@+id/cbx_existing_customer"
            app:layout_constraintTop_toBottomOf="@+id/cbx_existing_customer" />

        <Spinner
            android:id="@+id/customer_spinner"
            android:layout_width="255dp"
            android:layout_height="26dp"
            android:layout_marginEnd="30dp"
            android:layout_marginRight="30dp"
            app:layout_constraintBottom_toBottomOf="@+id/lblCustomer_ST"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/lblCustomer_ST"
            app:layout_constraintTop_toTopOf="@+id/lblCustomer_ST"
            app:layout_constraintVertical_bias="0.277" />

        <include
            layout="@layout/sell_tickets_customer_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/customer_spinner" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>